@@ -7,6 +7,7 @@
 	* packages/build.popt/Makefile, packages/build.scons/Makefile,
 	  packages/build.libtool/Makefile, packages/build.nsis/Makefile:
 	  misc. cosmetic changes
+	* packages/build.gettext/*: added
 
 2011-07-31 Borut Razem <borut.razem AT gmail.com>
 
